se crea el forgot pass

--- a/app/views/pages/micuentalogin.html.erb
+++ b/app/views/pages/micuentalogin.html.erb
@@ -43,9 +43,9 @@
       <div class="actions">
         <input type="submit" value="Ingresar" class="btn btn-success"/>
         <%= link_to 'Registrarse',  registrar_usuario_sessions_path  %>
+        <%= link_to '¿Olvido su contraseña?',   olvido_clave_sessions_path  %>
       </div>
     </form>
-   
 
   </div>
 
