--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">
-      Detalles de Perfil </small>
+      Detalles de Perfil
     </h1>
     <%= render 'admin/includes/top' %>
   </div>
@@ -12,16 +12,20 @@
     <div class="table-responsive">
         <table class="tabled-stripped tabled-bordered">
           <thead class="">
-          <th>Nombre y Apellido</th>
-          <th>Cedula</th>
+          <tr>
+            <th>Nombre y Apellido</th>
+            <th>Cedula</th>
+          </tr>
           </thead>
           <tbody>
+          <tr>
           <td>
             <%= @customer.name %>
           </td>
           <td>
             <%= @customer.cedula %>
           </td>
+          </tr>
           </tbody>
         </table>
       </div>
@@ -35,7 +39,7 @@
               <% else %>
                   <%= link_to 'Reiniciar Clave', edit_admin_customer_path(@customer.id), :class=>'btn btn-warning' %>
               <% end %>
-              <%= link_to 'Eliminar', {:controller => 'admin/customers', :action => 'destroy', :id => @customer.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
+              <%= link_to 'Eliminar', {:controller => 'admin/customers', :action => 'destroy', :id => @customer.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => :delete,  :class=>'btn btn-danger' %>
             </div>
       </div>
   </div>
