--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -1,143 +1,165 @@
-<div class="row">
-  <div class="col-lg-12">
-    <h1 class="page-header">
-      Repuestos <small>/ Editar</small>
-    </h1>
-
-  </div>
-</div>
-
-<%= render partial: 'includes/messages_errors', locals: {object: @extra} %>
-<div class="row">
-
-    <%= form_for @extra, :url => mirepuestosedit_path , :method=> 'post' do |f|  %>
-
-        <!--nombre repuesto y tipo de camion-->
-        <div class="row">
-            <div class="col-md-5 col-md-offset-1">
-                <div class="form-group">
-                    <%= f.label :name, 'Nombre de repuesto' %>
-                    <%= f.text_field :name, :class =>'form-control'  %>
-                </div>
-            </div>
-
-            <div class="col-md-5">
-                <div class="form-group">
-                    <%= f.label :type_truck_id, 'Tipo de camion' %>
-                    <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-                </div>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Repuestos <small>/ Editar</small>
+            </h1>
         </div>
-        <!--precio y marca-->
-        <div class="row">
-            <div class="col-md-5 col-md-offset-1">
-            <div class="form-group">
-                <%= f.label :price, 'Precio' %>
-                <%= f.number_field :price, :class =>'form-control text_field'  %>
-            </div>
-        </div>
+    </div>
 
-            <div class="col-md-5">
+    <%= render partial: 'includes/messages_errors', locals: {object: @extra} %>
+    <div class="row">
 
-                <div class="form-group">
-                    <%= f.label :brand_extra_id, 'Marca de Repuesto' %>
-                    <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-                </div>
-            </div>
-        </div>
-        <!--Telefono y Horario-->
-        <div class="row">
-            <div class='col-md-5 col-md-offset-1'>
-            <div class="form-group">
-                <%= f.label :phone, 'Teléfono' %>
-                <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
-            </div>
-        </div>
-                <div class="col-md-5">
-                    <div class="col-md-3">
-                        <%= f.label :horario, 'Horario de atencion' %>
-                        <%= f.collection_select :horario, @horas,:first,:first,{},{class: 'form-control text_field'} %>
+        <%= form_for @extra, :url => mirepuestosedit_path , method: :post do |f|  %>
+
+            <% if !@extraLateUpdate %>
+                <!--nombre repuesto y tipo de camion-->
+                <div class="row">
+                    <div class="col-md-5 col-md-offset-1">
+                        <div class="form-group">
+                            <%= f.label :name, 'Nombre de repuesto' %>
+                            <%= f.text_field :name, :class =>'form-control'  %>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <%= f.label :type_truck_id, 'Tipo de camion' %>
+                            <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
                     </div>
                 </div>
-            </div>
-        <!--Direccion-->
-        <div class="row">
+                <!--precio y marca-->
+                <div class="row">
+                    <div class="col-md-5 col-md-offset-1">
+                        <div class="form-group">
+                            <%= f.label :price, 'Precio' %>
+                            <%= f.number_field :price, :class =>'form-control text_field'  %>
+                        </div>
+                    </div>
 
-            <div class="col-md-5 col-md-offset-1">
-                <div class="form-group">
-                    <%= f.label :address, 'Dirección' %>
-                    <%= f.text_field :address, :class =>'form-control'  %>
+                    <div class="col-md-5">
+
+                        <div class="form-group">
+                            <%= f.label :brand_extra_id, 'Marca de Repuesto' %>
+                            <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <!--Departamento y ciudad-->
-        <div class="row">
-            <div class="col-md-5 col-md-offset-1">
-                <div class="form-group">
-                    <%= f.label :state_id, 'Departamento' %>
-                    <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                <!--Telefono y Horario-->
+                <div class="row">
+                    <div class='col-md-5 col-md-offset-1'>
+                        <div class="form-group">
+                            <%= f.label :phone, 'Teléfono' %>
+                            <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="col-md-3">
+                            <%= f.label :horario, 'Horario de atencion' %>
+                            <%= f.collection_select :horario, @horas,:first,:first,{},{class: 'form-control text_field'} %>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="col-md-5">
-                <div class="form-group">
-                    <%= f.label :city_id, 'Ciudad' %>
-                    <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
+                <!--Direccion-->
+                <div class="row">
+                    <div class="col-md-5 col-md-offset-1">
+                        <div class="form-group">
+                            <%= f.label :address, 'Dirección' %>
+                            <%= f.text_field :address, :class =>'form-control'  %>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <!-- Imagenes -->
-        <div class="row">
-            <div class="col-md-2 col-md-offset-1">
-                <div class="form-group">
-                    <%= f.label :picture1, 'Imagen 1' %>
-                    <%= f.file_field :picture1, :class =>'form-control'  %>
+                <!--Departamento y ciudad-->
+                <div class="row">
+                    <div class="col-md-5 col-md-offset-1">
+                        <div class="form-group">
+                            <%= f.label :state_id, 'Departamento' %>
+                            <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <%= f.label :city_id, 'Ciudad' %>
+                            <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <!-- Imagenes -->
+                <div class="row">
+                    <div class="col-md-2 col-md-offset-1">
+                        <div class="form-group">
+                            <%= f.label :picture1, 'Imagen 1' %>
+                            <%= f.file_field :picture1, :class =>'form-control'  %>
+                        </div>
+                    </div>
 
-            <div class="col-md-2">
-                <div class="form-group">
-                    <%= f.label :picture2, 'Imagen 2' %>
-                    <%= f.file_field :picture2, :class =>'form-control'  %>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <%= f.label :picture2, 'Imagen 2' %>
+                            <%= f.file_field :picture2, :class =>'form-control'  %>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <%= f.label :picture3, 'Imagen 3' %>
+                            <%= f.file_field :picture3, :class =>'form-control'  %>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <%= f.label :picture4, 'Imagen 4' %>
+                            <%= f.file_field :picture4, :class =>'form-control'  %>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <%= f.label :picture5, 'Imagen 5' %>
+                            <%= f.file_field :picture5, :class =>'form-control'  %>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-md-2">
-                <div class="form-group">
-                    <%= f.label :picture3, 'Imagen 3' %>
-                    <%= f.file_field :picture3, :class =>'form-control'  %>
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        <%= f.label :description, 'Descripccion' %>
+                        <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
+                    </div>
                 </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <%= f.label :picture4, 'Imagen 4' %>
-                    <%= f.file_field :picture4, :class =>'form-control'  %>
+            <% else %>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <%= f.label :price, 'Precio' %>
+                            <%= f.number_field :price, :class =>'form-control text_field'  %>
+                        </div>
+                    </div>
+                    <%= f.fields_for :customer  do |ff| %>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <%= ff.label :telefono, 'Telefono' %>
+                                <%= ff.text_field :telefono, :class =>'form-control'  %>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <%= ff.label :email, 'Email' %>
+                                <%= ff.text_field :email, :class =>'form-control', :autocorrect=>'off' %>
+                            </div>
+                        </div>
+                    <% end %>
                 </div>
-            </div>
+            <% end%>
 
-            <div class="col-md-2">
-                <div class="form-group">
-                    <%= f.label :picture5, 'Imagen 5' %>
-                    <%= f.file_field :picture5, :class =>'form-control'  %>
-                </div>
-            </div>
-        </div>
+            <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
+        <% end %>
 
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <%= f.label :description, 'Descripccion' %>
-                <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
-            </div>
-        </div>
+    </div>
 
-      <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
-
-<% end %>
-
-
-
-  </div>
 </div>
 
 
@@ -148,14 +170,14 @@
 
         $('#extra_state_id').on('change', function() {
 
-            $('#truck_city_id option').html('')
+            $('#truck_city_id option').html('');
             function loader(data){
                 $('#truck_city_id option').html('Cargando...')
-            };
+            }
 
             function error(data){
                 alert("Error enviados los datos");
-            };
+            }
 
 
 
@@ -168,7 +190,7 @@
                 success: function (msg) {
 
 
-                    $('#extra_city_id').html('')
+                    $('#extra_city_id').html('');
 
 
                     $.each(msg, function(index, value) {
