--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -1,153 +1,140 @@
-<div class="row">
-  <div class="col-lg-12">
-    <h1 class="page-header">
-      Servicios <small>/ editar</small>
-    </h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+            Servicios <small>/ editar</small>
+            </h1>
+        </div>
+    </div>
 
-  </div>
+    <div class="row">
+        <div class="col-md-12">
+            <%= render partial: 'includes/messages_errors', locals: {object: @service} %>
+            <%= form_for @service, :url => miserviciosedit_path, method: :post do |f|  %>
+                <% if @serviceLateUpdate %>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <%= f.label :price, 'Precio' %>
+                                <%= f.number_field :price, :class =>'form-control text_field'  %>
+                            </div>
+                        </div>
+                        <%= f.fields_for :customer  do |ff| %>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <%= ff.label :telefono, 'Telefono' %>
+                                    <%= ff.text_field :telefono, :class =>'form-control'  %>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <%= ff.label :email, 'Email' %>
+                                    <%= ff.text_field :email, :class =>'form-control', :autocorrect=>'off' %>
+                                </div>
+                            </div>
+                        <% end %>
+                    </div>
+                <% else %>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <%= f.label :name, 'Nombre de servicio' %>
+                                <%= f.text_field :name, :class =>'form-control'  %>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <%= f.label :phone, 'Teléfono' %>
+                                <%= f.text_field :phone, :class =>'form-control' , maxlength: 11 %>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <%= f.label :address, 'Dirección' %>
+                                <%= f.text_field :address, :class =>'form-control'  %>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <%= f.label :horario, 'Horario de atencion' %>
+                                    <%= f.collection_select :horario, @horas,:first,:first,{prompt:'Selecciones'},{class: 'form-control text_field'} %>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <%= f.label :state_id, 'Departamento' %>
+                                <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <%= f.label :city_id, 'Ciudad' %>
+                                <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <%= f.label :description, 'Descripccion' %>
+                            <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/>
+                        </div>
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <%= f.label :picture1, 'Imagen principal' %>
+                                <%= f.file_field :picture1, :class =>'form-control'  %>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <%= f.label :picture2, 'Imagen 2' %>
+                                <%= f.file_field :picture2, :class =>'form-control'  %>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <%= f.label :picture3, 'Imagen 3' %>
+                                <%= f.file_field :picture3, :class =>'form-control'  %>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <%= f.label :picture4, 'Imagen 4' %>
+                                <%= f.file_field :picture4, :class =>'form-control'  %>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <%= f.label :picture5, 'Imagen 5' %>
+                                <%= f.file_field :picture5, :class =>'form-control'  %>
+                            </div>
+                        </div>
+                    </div>
+                <% end %>
+                <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: miservicios_path } %>
+            <% end %>
+        </div>
+    </div>
+
 </div>
-
-<div class="row">
-  <div class="col-md-12">
-    <%= render partial: 'includes/messages_errors', locals: {object: @service} %>
-      <%= form_for @service, :url => miserviciosedit_path, :method=>'post' do |f|  %>
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :name, 'Nombre de servicio' %>
-              <%= f.text_field :name, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :phone, 'Teléfono' %>
-              <%= f.text_field :phone, :class =>'form-control' , maxlength: 11 %>
-            </div>
-          </div>
-
-
-        </div>
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :address, 'Dirección' %>
-              <%= f.text_field :address, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-3">
-            <%= f.label :horario, 'Horario de atencion' %>
-            <%= f.collection_select :horario, @horas,:first,:first,{prompt:'Selecciones'},{class: 'form-control text_field'} %>
-          </div>
-        </div>
-
-          </div>
-
-        </div>
-
-
-        <div class="row">
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :type_service_id, 'Tipo de servicio' %>
-              <%= f.collection_select :type_service_id, TypeService.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-            </div>
-          </div>
-
-        </div>
-
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :state_id, 'Departamento' %>
-              <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-            </div>
-          </div>
-
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :city_id, 'Ciudad' %>
-              <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
-            </div>
-          </div>
-
-
-
-        </div>
-
-
-
-
-
-
-
-
-        <div class="row">
-          <div class="col-md-12">
-            <%= f.label :description, 'Descripccion' %>
-            <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/>
-          </div>
-        </div>
-
-
-
-
-        <div class="row">
-          <div class="col-md-2">
-            <div class="form-group">
-              <%= f.label :picture1, 'Imagen principal' %>
-              <%= f.file_field :picture1, :class =>'form-control'  %>
-
-
-
-            </div>
-          </div>
-
-          <div class="col-md-2">
-            <div class="form-group">
-              <%= f.label :picture2, 'Imagen 2' %>
-              <%= f.file_field :picture2, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-2">
-            <div class="form-group">
-              <%= f.label :picture3, 'Imagen 3' %>
-              <%= f.file_field :picture3, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-2">
-            <div class="form-group">
-              <%= f.label :picture4, 'Imagen 4' %>
-              <%= f.file_field :picture4, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-2">
-            <div class="form-group">
-              <%= f.label :picture5, 'Imagen 5' %>
-              <%= f.file_field :picture5, :class =>'form-control'  %>
-            </div>
-          </div>
-        </div>
-
-        <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: miservicios_path } %>
-        
-    <% end %>
-
-  </div>
-</div>
-
-
 
 <script>
     var ready;
@@ -155,14 +142,14 @@
 
 
 
-        $('#truck_city_id option').html('')
+        $('#truck_city_id option').html('');
         function loader(data){
-            $('#truck_city_id option').html('Cargando...')
-        };
+            $('#truck_city_id option').html('Cargando...');
+        }
 
         function error(data){
             alert("Error enviados los datos");
-        };
+        }
 
 
 
@@ -175,7 +162,7 @@
             success: function (msg) {
 
 
-                $('#service_city_id').html('')
+                $('#service_city_id').html('');
 
 
                 $.each(msg, function(index, value) {
@@ -199,14 +186,14 @@
 
         $('#service_state_id').on('change', function() {
 
-            $('#truck_city_id option').html('')
+            $('#truck_city_id option').html('');
             function loader(data){
                 $('#truck_city_id option').html('Cargando...')
-            };
+            }
 
             function error(data){
                 alert("Error enviados los datos");
-            };
+            }
 
 
 
@@ -219,12 +206,12 @@
                 success: function (msg) {
 
 
-                    $('#service_city_id').html('')
+                    $('#service_city_id').html('');
 
 
                     $.each(msg, function(index, value) {
                         console.log('<option value="'+value.id+'">'+value.name+'</option>');
-                        $('#service_city_id').append('<option value="'+value.id+'">'+value.name+'</option>')
+                        $('#service_city_id').append('<option value="'+value.id+'">'+value.name+'</option>');
                     });
 
                 },
