--- a/app/views/admin/tipo_carrocerias/edit.html.erb
+++ b/app/views/admin/tipo_carrocerias/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">
-      Tipo Carroceria <small>/ Agregar</small>
+      Tipo Carroceria <small>/ Editar</small>
     </h1>
     <%= render 'admin/includes/top' %>
   </div>
