--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,5 +1,26 @@
-%h1 New admin_user
+.row
+  .col-lg-12
+    %h1.page-header
+      Usuarios
+      %small / Agregar
+    = render 'admin/includes/top'
 
-= render 'form'
+/ /.row
+- if @admin_user.errors.any?
+  .panel.panel-danger
+    .panel-heading
+      = pluralize(@admin_user.errors.count, "Errores")
+      tratando de guardar:
+    %p
+    %ul
+      - @admin_user.errors.full_messages.each do |msg|
+        %li= msg
+/ /.row
+.row
+  .col-md-12
+    = simple_form_for @admin_user, :url => admin_users_path, :method=>'post' do |f|
+      = render partial: "form", locals: {f: f}
+
+
 
 = link_to 'Back', admin_users_path
