--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -276,6 +276,9 @@
         <a href="<%= admin_states_path %>"><i class="fa fa-fw  fa-map-marker"></i> Ubicaciones</a>
       </li>
 
+      <li>
+        <a href="<%= admin_users_path %>"><i class="fa fa-fw  fa-map-marker"></i> Administradores</a>
+      </li>
 
     </ul>
   </div>
