se agrega el maximo tamaño en el telefono de los mensajes

--- a/app/views/includes/_message_inbox.html.haml
+++ b/app/views/includes/_message_inbox.html.haml
@@ -18,7 +18,7 @@
               .form-group
                 = f.label :telefono
                 %span.astk *
-                = f.text_field :telefono, class: 'form-control txt e'
+                = f.text_field :telefono, maxlength: 11, class: 'form-control txt e'
             .col-md-6
               .form-group
                 = f.label :mensaje
