--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -18,12 +18,12 @@
 		        <div class="col-md-12">
 			        <h3><small>Usted esta agregando</small>
 
-			  <%= if params[:v] == '1' then 'Tractomula' end %>
-			  <%= if params[:v] == '2' then 'Volqueta' end %>
-			  <%= if params[:v] == '3' then 'Camion' end %>
-			  <%= if params[:v] == '4' then 'Buses' end %>
-			  <%= if params[:v] == '5' then 'Trailers' end %>
-			  <%= if params[:v] == '6' then 'Vans' end %>
+			  <%= if params[:v] == '1' || @truck.type_truck_id ==1 then 'Tractomula' end %>
+			  <%= if params[:v] == '2' || @truck.type_truck_id ==2 then 'Volqueta' end %>
+			  <%= if params[:v] == '3' || @truck.type_truck_id ==3 then 'Camion' end %>
+			  <%= if params[:v] == '4' || @truck.type_truck_id ==4 then 'Buses' end %>
+			  <%= if params[:v] == '5' || @truck.type_truck_id ==5 then 'Trailers' end %>
+			  <%= if params[:v] == '6' || @truck.type_truck_id ==6 then 'Vans' end %>
 			</h3>
 		        </div>
 		    </div>
