--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -241,7 +241,7 @@
 
 
             <!-- 1 tractomula-->
-            <% if params[:v] == '1' %>
+            <% if params[:v] == '1' || @truck.type_truck_id == 1%>
 
 
 
@@ -429,7 +429,7 @@
             <% end %>
 
             <!--volquetas 2-->
-            <% if params[:v] == '2' %>
+            <% if params[:v] == '2' || @truck.type_truck_id == 2 %>
 
 
 
@@ -567,7 +567,7 @@
             <% end %>
 
             <!--Caminion 3-->
-            <% if params[:v] == '3' %>
+            <% if params[:v] == '3' || @truck.type_truck_id == 3 %>
 
 
 
@@ -676,7 +676,7 @@
             <% end %>
 
             <!--buses 4-->
-            <% if params[:v] == '4' %>
+            <% if params[:v] == '4'  || @truck.type_truck_id == 4  %>
 
 
                 <div class="row">
@@ -868,15 +868,10 @@
                 </div>
 
 
-
-
-
-
-
             <% end %>
 
             <!-- trailers-->
-            <% if params[:v] == '5' %>
+            <% if params[:v] == '5' || @truck.type_truck_id == 5  %>
 
 
 
@@ -1006,7 +1001,7 @@
             <% end %>
 
             <!--VANS-->
-            <% if params[:v] == '6' %>
+            <% if params[:v] == '6' || @truck.type_truck_id == 6  %>
 
                 <div class="row">
                     <div class="col-md-6">
