--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -103,12 +103,13 @@
       <div class="col-md-6">
         <div class="form-group">
           <%= f.label :city_id, 'Ciudad' %>
-          <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+          <% if @extra.city_id.nil? %>
+            <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+          <% else %>
+            <%= f.collection_select(:city_id, City.getByState(@extra.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
+          <% end %>
         </div>
       </div>
-
-
-
     </div>
 
 
@@ -167,11 +168,7 @@
       </div>
     </div>
 
-
-
-
-    <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-    <%=  link_to 'Cancelar', mirepuestos_path, :class=>'btn btn-warning' %>
+    <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
 <% end %>
 
 
