--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -79,7 +79,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <%= f.label :city_id, 'Ciudad' %>
-                                <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+                                <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
                             </div>
                         </div>
                     </div>
