--- a/app/views/admin/extras/new.html.erb
+++ b/app/views/admin/extras/new.html.erb
@@ -120,7 +120,7 @@
           <% if @extra.city_id.nil? %>
               <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
           <% else %>
-              <%= f.collection_select(:city_id, City.getByState(@truck.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
+              <%= f.collection_select(:city_id, City.getByState(@extra.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
           <% end %>
         </div>
       </div>
