--- a/app/views/admin/services/new.html.erb
+++ b/app/views/admin/services/new.html.erb
@@ -99,10 +99,10 @@
           <div class="col-md-6">
             <div class="form-group">
               <%= f.label :city_id, 'Ciudad' %>
-              <% if @truck.city_id.nil? %>
+              <% if @service.city_id.nil? %>
                   <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
               <% else %>
-                  <%= f.collection_select(:city_id, City.getByState(@truck.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
+                  <%= f.collection_select(:city_id, City.getByState(@service.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
               <% end %>
             </div>
           </div>
