crud admin fix routes

--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -5,9 +5,9 @@
 
     = f.input :email
 
-    = f.input :firstName
+    = f.input :first_name
 
-    = f.input :lastName
+    = f.input :last_name
 
     = f.input :status
 
