--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -277,7 +277,7 @@
       </li>
 
       <li>
-        <a href="<%= admin_users_path %>"><i class="fa fa-fw  fa-map-marker"></i> Administradores</a>
+        <a href="<%= admin_users_path %>"><i class="fa fa-fw  fa-user"></i> Administradores</a>
       </li>
 
     </ul>
