--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,2 +1,39 @@
-%h1 Admin::Users#index
-%p Find me in app/views/admin/users/index.html.haml
+.row
+  .col-lg-12
+    %h1.page-header
+      Administradores
+      %small Indice
+    = render 'admin/includes/top'
+/ /.row
+- if flash[:notice]
+  = render partial: 'shared/flashNoticeMessage'
+/ /.row
+.row
+  .col-md-3
+    %p
+      = link_to 'Nuevo Administrador', new_admin_user_path,:method=>'get', :class=>'btn  btn-primary'
+  .col-md-3.col-md-offset-6
+    = render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field}
+.row
+  .col-lg-12
+    #tabla.table-responsive
+      %table.table.table-bordered.table-hover.table-striped
+        %thead
+          %tr
+            %th Nombre
+            %th Apellido  
+            %th Email
+            %th Acciones
+        %tbody
+          - @admin_users_filter.each do |object|
+            %tr
+              %td
+                = object.first_name
+              %td
+                = object.last_name
+              %td
+                = object.email    
+              %td
+                = link_to 'Editar', edit_admin_user_path(object.id), :class=>'btn btn-info'
+                = link_to 'Eliminar',{controller: 'admin/users',action: :destroy , id: object.id}, data: {:confirm => 'Estas seguro de eliminar este elemento?'}, method: :DELETE, :class=>'btn btn-danger'
+    / /.row
