--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -18,9 +18,20 @@
 / /.row
 .row
   .col-md-12
-    = simple_form_for @admin_user, :url => admin_users_path, :method=>'post' do |f|
-      = render partial: "form", locals: {f: f}
+    = form_for @admin_user, url: admin_users_path do |f|
 
+      .form-inputs
 
+        .col-md-6
+          = f.label 'Email' 
+          = f.email_field :email, class: 'form-control'
+
+        = f.text_field :first_name
+
+        = f.text_field :last_name
+
+        = f.text_field :status
+      .form-actions
+        = f.button :submit
 
 = link_to 'Back', admin_users_path
