--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -7,6 +7,8 @@
 / /.row
 - if flash[:notice]
   = render partial: 'shared/flashNoticeMessage'
+- if flash[:danger]
+  = render partial: 'shared/flashDangerMessage'  
 / /.row
 .row
   .col-md-3
@@ -17,23 +19,5 @@
 .row
   .col-lg-12
     #tabla.table-responsive
-      %table.table.table-bordered.table-hover.table-striped
-        %thead
-          %tr
-            %th Nombre
-            %th Apellido  
-            %th Email
-            %th Acciones
-        %tbody
-          - @admin_users_filter.each do |object|
-            %tr
-              %td
-                = object.first_name
-              %td
-                = object.last_name
-              %td
-                = object.email    
-              %td
-                = link_to 'Editar', edit_admin_user_path(object.id), :class=>'btn btn-info'
-                = link_to 'Eliminar',{controller: 'admin/users',action: :destroy , id: object.id}, data: {:confirm => 'Estas seguro de eliminar este elemento?'}, method: :DELETE, :class=>'btn btn-danger'
+      = render partial: 'tableResult', locals:{ objects: @admin_users_filter}
     / /.row
