--- a/app/views/admin/type_truck/index.html.erb
+++ b/app/views/admin/type_truck/index.html.erb
@@ -1,3 +1,5 @@
+
+
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">
@@ -23,14 +25,54 @@
       <%= link_to 'Nuevo tipo', new_admin_type_truck_path,:method=>'get', :class=>'btn  btn-primary' %>
     </p>
   </div>
-  <div class="col-md-3 col-md-offset-6">
-    <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
-  </div>
+      <div class="col-md-3 col-md-offset-6">
+        <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
+    </div>
 </div>
 
 <div class="row">
   <div class="col-lg-12">
-    <%= render partial: 'shared/tableResult', locals:{objects:@types_filter, object_controller_name: controller_name} %>
+
+
+
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover table-striped">
+        <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @types.each do |type| %>
+            <tr>
+
+
+              <td>
+                <%= type.name %>
+              </td>
+              <td>
+
+                <%= link_to 'Agregar subtipos', admin_type_truck_sub_trucks_path(type.id), :class=>'btn btn-info' %>
+                <%= link_to 'Agregar Referencias', admin_type_truck_referencias_path(type.id), :class=>'btn btn-info' %>
+
+
+                <%= link_to 'Editar', edit_admin_type_truck_path(type.id), :class=>'btn btn-info' %>
+                <%= link_to 'Eliminar', {:controller => 'admin/type_truck', :action => 'destroy', :id => type.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
+              </td>
+            </tr>
+        <% end %>
+
+
+        </tbody>
+
+
+
+      </table>
+    </div>
+
+
+
   </div>
 </div>
 <!-- /.row -->
