se arregla el boton de contactar

--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -94,8 +94,7 @@
     </div><!-- /.description-container -->
 
     <div class="row outer-top-vs"><div class="cart col-md-12 col-lg-6 clearfix animate-effect">
-      <div class="action"><button type="button" id="c" class="btn btn-primary">Contactar</button>
-      </div><!-- /.action -->
+      <div class="action"><a data-toggle="tab" href="#contactar" class="btn btn-primary">Contactar</a></div><!-- /.action -->
     </div>
     </div>
   </div><!-- /.product-info -->
@@ -104,7 +103,7 @@
 <div class="product-tabs outer-top-smal  wow fadeInUp">
 
   <ul id="product-tabs" class="nav nav-tabs nav-tab-cell-detail">
-    <li class="active"><a data-toggle="tab" href="#detalles">DETALLES</a></li>
+    <li><a data-toggle="tab" href="#detalles">DETALLES</a></li>
     <li id="c1"> <a data-toggle="tab" href="#contactar">CONTACTAR</a></li>
   </ul><!-- /.nav-tabs #product-tabs -->
 
