se agregan las referencias a la busqueda del modal

--- a/app/views/includes/_modal_search.html.haml
+++ b/app/views/includes/_modal_search.html.haml
@@ -26,16 +26,22 @@
                 %label.attribute_label.attribute-key{:for => "group_1"}
                   %p MARCAS
                 .attribute_list
-                  = f.select(:brand_truck_id_eq, options_from_collection_for_select(BrandTruck.order(:name), :id,:name), {prompt: 'Todas las marcas'}, { class:  'form-control', id: 'camion_brand'})               
+                  = f.select(:brand_truck_id_eq, options_from_collection_for_select(BrandTruck.order(:name), :id,:name), {prompt: 'Todas las marcas'}, { class:  'form-control', id: 'camion_brand'})
+            .col-xs-2.col-sm-2.col-md-2
+              %fieldset.attribute_fieldset
+                %label.attribute_label.attribute-key{:for => "group_1"}
+                  %p REFERENCIAS
+                .attribute_list
+                  = f.select(:referencia_id_eq, options_from_collection_for_select(Referencia.order(:name), :id,:name), {prompt: 'Referencias'}, { class:  'form-control', id: 'camion_ref'})                      
                 / /.attribute_list
-            .col-xs-3.col-sm-3.col-md-3
+            .col-xs-2.col-sm-2.col-md-2
               %fieldset.attribute_fieldset
                 %label.attribute_label.attribute-key{:for => "group_1"}
                   %p UBICACIÓN
                 .attribute_list
                   = f.select(:state_id_eq, options_from_collection_for_select(@states, :id,:name), {prompt: 'Selecciona'}, { class:  'form-control'})
                 / /.attribute_list
-            .col-xs-3.col-sm-3.col-md-3
+            .col-xs-2.col-sm-2.col-md-2
               %fieldset.attribute_fieldset
                 %label.attribute_label.attribute-key{:for => "group_1"}  
                 .attribute_list.pull-right{:style => "width: 100%;"}
