se agregan las politicas y los terminos al registrarse

--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -24,6 +24,10 @@
                 %a.dropdown-toggle{:href => registrar_usuario_sessions_path} Registrarse
             %li.dropdown.dropdown-small
               %a.dropdown-toggle{:href => "/tarifas"}
+            %li.dropdown.dropdown-small
+              %a.dropdown-toggle{:href => "/terminos"} Terminos
+            %li.dropdown.dropdown-small
+              %a.dropdown-toggle{:href => "/politicas"} Politicas
         .clearfix
   .header-nav.animate-dropdown.main-header
     .container
