--- a/app/views/includes/_footer.erb
+++ b/app/views/includes/_footer.erb
@@ -26,7 +26,7 @@
           <!-- ============================================================= CONTACT TIMING============================================================= -->
           <div class="contact-timing">
             <div class="module-heading">
-              <a href="/tarifas">Tarifas</a> - <a href="/mi-cuenta">Mis Anuncios</a> - <a href="/mi-cuenta">Modifica tu Anuncio</a> - <a href="/mi-cuenta">Renueva tu Anuncio</a> - <a href="/mi-cuenta">Notifica tu Venta</a>
+              <a href="/mi-cuenta">Mis Anuncios</a> - <a href="/mi-cuenta">Renueva tu Anuncio</a> - <a href="/mi-cuenta">Notifica tu Venta</a> - <a href="/terminos">Terminos</a> - <a href="/politicas">Politicas</a>
               <p>Llámanos gratis desde  tu fijo nacional o local al 018000054415455</p>
             </div><!-- /.module-heading -->
 
