--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -97,7 +97,7 @@
 
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <%= f.label :brand_truck_id, 'Marca de camion' %>
+                                    <%= f.label :brand_truck_id, 'Marcas' %>
                                     <%= f.collection_select :brand_truck_id, BrandTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <%= f.label :pesobruto, 'Peso bruto' %>
-                                    <%= f.number_field :pesobruto, :class =>'form-control text_filed'  %>
+                                    <%= f.text_field :pesobruto, :class =>'form-control text_field'%>
                                 </div>
                             </div>
                         </div>
