--- a/app/views/admin/extras/new.html.erb
+++ b/app/views/admin/extras/new.html.erb
@@ -93,7 +93,7 @@
       <div class="col-md-6">
 
         <div class="form-group">
-          <%= f.label :brand_extra_id, 'Marca de camion' %>
+          <%= f.label :brand_extra_id, 'Marcas' %>
           <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
         </div>
       </div>
