--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -57,7 +57,7 @@
 
         <div class="col-md-6">
           <div class="form-group">
-            <%= f.label :brand_truck_id, 'Marca de camion' %>
+            <%= f.label :brand_truck_id, 'Marcas' %>
             <%= f.collection_select :brand_truck_id, BrandTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
           </div>
         </div>
