--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -89,8 +89,8 @@
     <div class="description-container m-t-20">
       <h4>Vendedor</h4>
       <p>Nombre: <b><%= @truck.customer ? @truck.customer.name.capitalize : 'No registrado' %></b></p>
-      <p>Teléfono: <b><%= @truck.customer ? @truck.customer.telefono : 'No registrado' %></b></p>
-      <p>Email: <b><%= @truck.customer ? @truck.customer.email : 'No registrado' %></b></p>
+      <p>Teléfono: <b><%= @truck.phone ? @truck.phone : 'No registrado' %></b></p>
+      <p>Email: <b><%= @truck.email ? @truck.email : 'No registrado' %></b></p>
     </div><!-- /.description-container -->
 
     <div class="row outer-top-vs"><div class="cart col-md-12 col-lg-6 clearfix animate-effect">
