--- a/app/views/pages/repuesto.html.erb
+++ b/app/views/pages/repuesto.html.erb
@@ -35,6 +35,7 @@
                   <tr class="nymou"><td>Ubicación:</td><td class="pull-right"><%= @extra.state.name if @extra.state %> - <%= @extra.city.name  if  @extra.city %></td></tr>
                   <tr class="nymou"><td>Precio:</td><td class="pull-right"> <%= number_to_currency( @extra.price,  precision: 0, delimiter: '.') %></td></tr>
                   <tr class="nymou"><td>Teléfono:</td><td class="pull-right"><%= @extra.phone %></td></tr>
+                  <tr class="nymou"><td>Email:</td><td class="pull-right"><%= @extra.email %></td></tr>
                   <tr class="nymou"><td>Horario:</td><td class="pull-right"><%= @extra.horario %></td></tr>
                   <tr class="nymou"><td>Dirección:</td><td class="pull-right"><%= @extra.address %></td></tr>
                   </tbody></table>
