--- a/app/views/admin/extras/edit.html.erb
+++ b/app/views/admin/extras/edit.html.erb
@@ -28,8 +28,6 @@
 <div class="row">
   <div class="col-md-12">
 
-
-
     <%= form_for @extra, :url => admin_extra_path, :method=>'put' do |f|  %>
 
         <div class="row">
@@ -75,9 +73,14 @@
               <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :email, 'Email' %>
+              <%= f.email_field :email, :class =>'form-control' minlength: 1 %>
+            </div>
+          </div>
 
         </div>
-
 
 
         <div class="row">
