--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -14,165 +14,103 @@
     <%= render partial: 'includes/messages_errors', locals: {object: @extra} %>
     <%= form_for @extra, :url => mirepuestosnew_path  do |f|  %>
 
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :name, 'Nombre de repuesto' %>
-          <%= f.text_field :name, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :price, 'Precio' %>
-          <%= f.number_field :price, :class =>'form-control text_field'  %>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :address, 'Dirección' %>
-          <%= f.text_field :address, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-
-          <div class="col-md-3">
-            <%= f.label :horario, 'Horario de atencion' %>
-            <%= f.collection_select :horario, @horas,:last,:first,{},{class: 'form-control text_field'} %>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :name, 'Nombre de repuesto' %>
+            <%= f.text_field :name, :class =>'form-control'  %>
           </div>
+        </div>
 
-
-      </div>
-
-    </div>
-
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :phone, 'Teléfono' %>
-          <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :price, 'Precio' %>
+            <%= f.number_field :price, :class =>'form-control text_field'  %>
+          </div>
         </div>
       </div>
 
-    </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :address, 'Dirección' %>
+            <%= f.text_field :address, :class =>'form-control'  %>
+          </div>
+        </div>
 
-
-
-
-
-    <div class="row">
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :type_truck_id, 'Tipo de camion' %>
-          <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+        <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :horario, 'Horario de atencion' %>
+              <%= f.collection_select :horario, @horas,:last,:first,{},{class: 'form-control text_field'} %>
+            </div>
         </div>
       </div>
 
-      <div class="col-md-6">
-
-        <div class="form-group">
-          <%= f.label :brand_extra_id, 'Marca de camion' %>
-          <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :phone, 'Teléfono' %>
+            <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :email, 'Email' %>
+            <%= f.email_field :email, :class =>'form-control' minlength: 1 %>
+          </div>
         </div>
       </div>
 
+      <div class="row">
 
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :type_truck_id, 'Tipo de Camion' %>
+            <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+          </div>
+        </div>
 
-    </div>
+        <div class="col-md-6">
 
-
-
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :state_id, 'Departamento' %>
-          <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+          <div class="form-group">
+            <%= f.label :brand_extra_id, 'Marca' %>
+            <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+          </div>
         </div>
       </div>
 
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :city_id, 'Ciudad' %>
-          <% if @extra.city_id.nil? %>
-            <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
-          <% else %>
-            <%= f.collection_select(:city_id, City.getByState(@extra.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
-          <% end %>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :state_id, 'Departamento' %>
+            <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+          </div>
         </div>
-      </div>
-    </div>
 
 
-
-
-
-    <div class="row">
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture1, 'Imagen 1' %>
-          <%= f.file_field :picture1, :class =>'form-control'  %>
-
-
-
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :city_id, 'Ciudad' %>
+            <% if @extra.city_id.nil? %>
+              <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+            <% else %>
+              <%= f.collection_select(:city_id, City.getByState(@extra.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
+            <% end %>
+          </div>
         </div>
       </div>
 
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture2, 'Imagen 2' %>
-          <%= f.file_field :picture2, :class =>'form-control'  %>
+      <%= render partial: 'shared/imagenes', locals:{ object: f } %>
+      
+      <div class="row">
+        <div class="col-md-12">
+          <%= f.label :description, 'Descripccion' %>
+          <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
         </div>
       </div>
 
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture3, 'Imagen 3' %>
-          <%= f.file_field :picture3, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture4, 'Imagen 4' %>
-          <%= f.file_field :picture4, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture5, 'Imagen 5' %>
-          <%= f.file_field :picture5, :class =>'form-control'  %>
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
-    <div class="row">
-      <div class="col-md-12">
-        <%= f.label :description, 'Descripccion' %>
-        <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
-      </div>
-    </div>
-
-    <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
-<% end %>
-
-
-
+      <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
+    <% end %>
   </div>
 </div>
 
@@ -226,6 +164,5 @@
 
     $(document).ready(ready);
     $(document).on('page:load', ready);
-
 
 </script>
