--- a/app/views/pages/servicio.html.erb
+++ b/app/views/pages/servicio.html.erb
@@ -37,6 +37,7 @@
                   <table class="table"><tbody>
                   <tr class="nymou"><td>Ubicación:</td><td class="pull-right"><%= @service.state.name if @service.state %> - <%= @service.city.name if @service.city %></td></tr>
                   <tr class="nymou"><td>Teléfono:</td><td class="pull-right"><%= @service.phone %></td></tr>
+                  <tr class="nymou"><td>Email:</td><td class="pull-right"><%= @service.email %></td></tr>
                   <tr class="nymou"><td>Horario:</td><td class="pull-right"><%= @service.horario %></td></tr>
                   <tr class="nymou"><td>Dirección:</td><td class="pull-right"><%= @service.address %></td></tr>
                   </tbody></table>
