--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -52,7 +52,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <%= f.label :email, 'Email' %>
-                  <%= f.email_field :email, :class =>'form-control' minlength: 1 %>
+                  <%= f.email_field :email, :class =>'form-control', minlength: 1 %>
                 </div>
               </div>
             </div>
