--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -50,13 +50,13 @@
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label :phone, 'Teléfono' %>
-            <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
+            <%= f.number_field :phone, :class =>'form-control', maxlength: 11  %>
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label :email, 'Email' %>
-            <%= f.email_field :email, :class =>'form-control' minlength: 1 %>
+            <%= f.email_field :email, :class =>'form-control', minlength: 1 %>
           </div>
         </div>
       </div>
