--- a/app/views/admin/extras/_resultTable.erb
+++ b/app/views/admin/extras/_resultTable.erb
@@ -35,38 +35,31 @@
           <%= extra.state.name if extra.state %>
         </td>
 
-
-
-
         <td>
-          <%= link_to 'Editar', edit_admin_extra_path(extra.id), :class=>'btn btn-info' %>
-          <%= link_to 'Eliminar', {:controller => 'extras', :action => 'destroy', :id => extra.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
+          <% if extra.active == 1 %>
+            <%= link_to 'Editar', edit_admin_extra_path(extra.id), :class=>'btn btn-info' %>
+            <%= link_to 'Eliminar', {:controller => 'extras', :action => 'destroy', :id => extra.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
+          <% end %>
         </td>
+
 
         <td>
           <% if extra.active == 1 %>
-
-
-              <%= link_to admin_updateState_path(extra.id,1,'extra'), :class=>'btn btn-success' do %>
-                  <i class="fa fa-check"></i>
-              <% end %>
-
-
-          <% else %>
-
-              <%= link_to admin_updateState_path(extra.id,0,'extra'), :class=>'btn btn-danger' do %>
-                  <i class="fa fa-times"></i>
-              <% end %>
-
-
+             <%= link_to admin_updateState_path(extra.id,1,'extra'), :class=>'btn btn-danger' do %>
+              <i class="fa fa-times"></i>
+             <% end %>
+          <% elsif extra.active == 0 %>
+             Inactivo por cliente   
+          <% elsif extra.active == 2 %>
+              Vendido
+          <% elsif extra.active == 3 %>
+            <%= link_to admin_updateState_path(extra.id,3,'extra'), :class=>'btn btn-success' do %>
+                <i class="fa fa-check"></i>
+            <% end %>
           <% end %>
         </td>
-      </tr>
-  <% end %>
-
-
+      </tr>    
+    <% end %>
   </tbody>
-
-
 
 </table>
